--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=$DB_NAME
-      - POSTGRES_PASSWORD=$DB_PASSWORD
+      POSTGRES_DB: $DB_NAME
+      POSTGRES_PASSWORD: $DB_PASSWORD
   web:
     build:
         context: ..
@@ -16,6 +16,15 @@ services:
     # To use a pre-built image, remove the above "build" section
     # and uncomment the following line:
     # image: healthchecks/healthchecks:latest
+    environment:
+      ALLOWED_HOSTS: $ALLOWED_HOSTS
+      DEFAULT_FROM_EMAIL: $DEFAULT_FROM_EMAIL
+      EMAIL_HOST: $EMAIL_HOST
+      EMAIL_HOST_PASSWORD: $EMAIL_HOST_PASSWORD
+      EMAIL_HOST_USER: $EMAIL_HOST_USER
+      SECRET_KEY: $SECRET_KEY
+      SITE_ROOT: $SITE_ROOT
+      CSRF_TRUSTED_ORIGINS: $CSRF_TRUSTED_ORIGINS
     ports:
         - "5000:5000"
         # To enable SMTP on port 2525, set SMTPD_PORT=2525 in .env
