--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,6 +25,11 @@ services:
       SECRET_KEY: $SECRET_KEY
       SITE_ROOT: $SITE_ROOT
       CSRF_TRUSTED_ORIGINS: $CSRF_TRUSTED_ORIGINS
+      DB_HOST: db
+      DB_NAME: $DB_NAME
+      DB_PASSWORD: $DB_PASSWORD
+      DB_PORT: 5432
+      DB_SSLMODE: prefer
     ports:
         - "5000:5000"
         # To enable SMTP on port 2525, set SMTPD_PORT=2525 in .env
