--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       DB_PORT: 5432
       DB_SSLMODE: prefer
       DEBUG: $DEBUG
+      SITE_LOGO_URL: $SITE_LOGO_URL
     ports:
         - "5000:5000"
         # To enable SMTP on port 2525, set SMTPD_PORT=2525 in .env
